update the fix training model (now it is running on franka panda)

--- a/franka_insertion_prediction/config/online_config_resume.yaml
+++ b/franka_insertion_prediction/config/online_config_resume.yaml
@@ -6,9 +6,8 @@ lr: 0.001
 log_step: 50
 
 data_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/data/expert_recordings.pkl'
-
-prior_traj_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/data/trajectories/expert_joints_poses.npy'
-prior_cartesian_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/data/trajectories/expert_cartesian_poses.npy'
+prior_traj_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/data/online/expert_joints_poses_new.npy'
+prior_cartesian_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/data/online/expert_cartesian_poses_new.npy'
 prior_targets_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/data/online/expert_targets.npy'
 
 model_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/weights/'
@@ -16,4 +15,5 @@ model_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_
 online_data_save_path: '/home/alex/catkin_ws/src/panda-insert/src/cobot_controllers/franka_insertion_prediction/data/online/online_xs_ys.npy'
 
 load_model: False
-resume: False
+
+resume: True
